--- a/app/first_project/templates/base.html
+++ b/app/first_project/templates/base.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="{% url 'posts_list_url' %}">Posts</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="{% url 'tags_lists_url' %}">Tags</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
